# NSTTF

./: .gitignore  CMakeLists.txt  README.md  clang-format.cmake
.github/workflows/: docker-image.yml
diagrams/: diagram.drawio
docker/: Dockerfile  README.md  run_tests.py
libs/clew/: CMakeLists.txt
libs/gpu/: CMakeLists.txt
libs/images/: CMakeLists.txt
libs/utils/: CMakeLists.txt
libs/utils/libutils/: fast_random.h
src/: CMakeLists.txt  main.cpp  main_aplusb.cpp  main_matrix_multiplication.cpp
src/ComputationGraph/: ComputationGraph.h  Node.h
src/Tensor/: Tensor.cpp  Tensor.h
src/cl/: aplusb.cl  aplusb_cl.h  cross_entropy.cl  division.cl  log.cl  matrix_multiplication.cl  matrix_multiplication_cl.h  matrix_transpose.cl  matrix_transpose_cl.h  multiplication.cl  reduce_sum.cl  subtraction.cl  sum.cl  unary_minus.cl
src/cl_build_headers/: matrix_multiplication_cl.h  matrix_transpose_cl.h  multiplication_cl.h  subtraction_cl.h  sum_cl.h
src/cl_functions/: CMakeLists.txt  cl_functions.h  matrix_multiplication_cl.cpp  matrix_transpose_cl.cpp  multiplication_cl.cpp  subtraction_cl.cpp  sum_cl.cpp
src/compiler/: CMakeLists.txt  compiler.cpp  compiler.h  instruction.cpp  instruction.h
src/computationGraph/: CMakeLists.txt  computationGraph.h  graph.cpp  node.cpp  node.h
src/dataLoader/: CMakeLists.txt  dataLoader.cpp  dataLoader.h
src/executor/: CMakeLists.txt  graphExecutor.cpp  graphExecutor.h
src/neuralNetwork/: CMakeLists.txt  SGD.cpp  SGD.h  neuralNetwork.cpp  neuralNetwork.h  utils.cpp  utils.h
src/operations/: CMakeLists.txt  abstractOperation.cpp  abstractOperation.h  function.cpp  function.h
src/tensor/: CMakeLists.txt  gpuPointer.cpp  ramPointer.cpp  tensor.cpp  tensor.h
src/utils/: CMakeLists.txt  OperationDict.h  compiler.cpp  compiler.h  functions.cpp  functions.h  graphExecutor.cpp  graphExecutor.h  instruction.h  utils.cpp  utils.h
tests/: CMakeLists.txt  dataLoaderTest.cpp  derivativeTests.cpp  efficiencyTest.cpp  executorTest.cpp  functionalTests.cpp  functionsTests.cpp  gpuTests.cpp  graphTests.cpp  main.cpp  neuralNetworkTest.cpp  tensorTests.cpp
